--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ header{
     background-color: transparent;
     display: flex;
     justify-content: space-between;
+    align-content: flex-end;
 }
 
 h1 {
